Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-32095

CMake module files are not accessible via "Locate" tool

XMLWordPrintable

    • cc0e6ba2d (17.0)

      The projects tree view helpfully shows included CMake files under the "CMake Modules" section. However, these files can not be found with the "Locate" tool (Cmd-K).

      This for example affects custom CMake find files or any other CMake files that are include()’ed from a CMakeLists.txt file.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            cadam Cristian Adam
            fseiffert Frederik Seiffert
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes